# orientation

./: .gitignore  README.md  package-lock.json  package.json  slides.md
deep_learning/: 1st.md  2nd.md  dl_1.md  global-bottom.vue  package-lock.json  package.json
deep_learning/1st/: _redirects  index.html
deep_learning/1st/assets/: DrawingControls-0380a58c.js  DrawingLayer-b6b9ad69.js  NoteDisplay-9d066b20.js  NotesView-d798cdf0.js  Presenter-a6a0383b.js  PresenterPrint-a1bcc462.js  index-6b9ccc3c.js  index-c66284e4.css
deep_learning/2nd/: 404.html  _redirects  index.html
deep_learning/2nd/assets/: DrawingControls-019ea202.js  DrawingControls-62fed630.js  DrawingControls-c3853ae4.js  DrawingControls-e8d5710e.js  DrawingLayer-556371a4.js  DrawingLayer-8f8f90bc.js  DrawingLayer-e3358743.js  DrawingLayer-ef57eca3.js  NoteDisplay-4e6d9a8e.js  NoteDisplay-737b538c.js  NoteDisplay-ba0a1364.js  NoteDisplay-c696587c.js  NotesView-be0dd487.js  NotesView-d6a71504.js  NotesView-e256d6d5.js  NotesView-f09fd672.js  Presenter-22b80afd.js  Presenter-89eb5add.js  Presenter-aa1fb87a.js  Presenter-e58e2c4c.js  PresenterPrint-9f669c85.js  PresenterPrint-d80766d2.js  PresenterPrint-e14ef157.js  PresenterPrint-e6871803.js  index-3813cbd4.js  index-470d2b3e.js  index-7f3205ae.js  index-7fa2b8cf.js  index-f5a6575b.css
deep_learning/components/: Mycircle.vue
deep_learning/hw1/: README.md  main.py  pyproject.toml
deep_learning/hw1/conf/: default.yaml  l2_regul.yaml
deep_learning/hw1/hw1/: config.py  data.py  model.py  resnet.py  utils.py
